--- a/app/src/main/res/layout/activity_dog_list.xml
+++ b/app/src/main/res/layout/activity_dog_list.xml
@@ -32,7 +32,7 @@
         android:id="@+id/tv_warning"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="*짧은 터치는 심박 데이터 그래프, 긴 터치는 등록 삭제 입니다."
+        android:text="*터치하면 심박 데이터 그래프를 볼 수 있습니다.\n*길게 터치하면 등록한 강아지가 삭제됩니다."
         android:textColor="@color/colorRed"
         android:textSize="13sp"
         android:layout_marginTop="8dp"
