--- a/app/src/main/res/layout/activity_home_fragment.xml
+++ b/app/src/main/res/layout/activity_home_fragment.xml
@@ -28,6 +28,13 @@
         app:layout_constraintGuide_percent="0.9" />
 
     <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/gl_final_right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.98" />
+
+    <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gl_mid2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -35,46 +42,67 @@
         app:layout_constraintGuide_percent="0.8"/>
 
     <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/gl_top11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.89" />
+
+    <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gl_top4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.55" />
+        app:layout_constraintGuide_percent="0.6" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gl_top6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.52" />
+        app:layout_constraintGuide_percent="0.6" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gl_top2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.2" />
+        app:layout_constraintGuide_percent="0.17" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gl_top7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.505" />
+        app:layout_constraintGuide_percent="0.46" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/gl_top10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.515" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gl_top5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.95" />
+        app:layout_constraintGuide_percent="0.99" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/gl_final_left"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.02" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gl_top3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.34"/>
+        app:layout_constraintGuide_percent="0.27" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gl_top1"
@@ -82,6 +110,52 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.06"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/gl_circle_top"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.15" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/gl_top8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.1" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/gl_top9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.19" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/gl_left2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.33"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/gl_right2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.67"/>
+
+    <ImageView
+        android:id="@+id/iv_circle"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/circle"
+        android:layout_marginLeft="5dp"
+        app:layout_constraintStart_toStartOf="@id/gl_left"
+        app:layout_constraintEnd_toEndOf="@id/gl_right"
+        app:layout_constraintTop_toTopOf="@id/gl_circle_top"
+        app:layout_constraintBottom_toBottomOf="@id/gl_top7"/>
 
     <TextView
         android:id="@+id/tv_status"
@@ -115,96 +189,85 @@
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
-        android:id="@+id/tv_selected_dog_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=" "
-        android:textSize="20dp"
-        android:layout_marginTop="35dp"
-        app:layout_constraintTop_toTopOf="@id/gl_top1"
-        app:layout_constraintStart_toStartOf="@id/gl_mid"
-        app:layout_constraintEnd_toEndOf="@id/gl_right"/>
-
-    <TextView
         android:id="@+id/tv_heart"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="10"
         android:textStyle="bold"
         android:textSize="65sp"
-        android:textColor="@color/colorWhite"
         android:gravity="center"
-        app:layout_constraintStart_toStartOf="@id/gl_mid"
-        app:layout_constraintEnd_toEndOf="@id/gl_right"
-        app:layout_constraintTop_toTopOf="@id/gl_top3"
-        app:layout_constraintBottom_toBottomOf="@id/gl_top6"/>
+        app:layout_constraintTop_toTopOf="@id/gl_top2"
+        app:layout_constraintStart_toStartOf="@id/gl_left"
+        app:layout_constraintEnd_toEndOf="@id/gl_right"/>
 
     <ImageView
         android:id="@+id/iv_heart"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/static_heart"
-        app:layout_constraintStart_toStartOf="@id/gl_left"
-        app:layout_constraintEnd_toEndOf="@id/gl_mid"
+        android:background="@drawable/heart"
+        app:layout_constraintStart_toStartOf="@id/gl_left2"
+        app:layout_constraintEnd_toEndOf="@id/gl_right2"
         app:layout_constraintTop_toTopOf="@id/gl_top3"
-        app:layout_constraintBottom_toTopOf="@id/gl_top6"/>
+        app:layout_constraintBottom_toBottomOf="@id/gl_top7"/>
 
     <Button
         android:id="@+id/btn_dog_select"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/btn_round_shape"
-        android:layout_marginTop="20dp"
+        android:layout_height="0dp"
+        android:background="@drawable/circle"
         android:text="강아지 선택"
-        app:layout_constraintTop_toTopOf="@id/gl_top1"
+        app:layout_constraintTop_toTopOf="@id/gl_top8"
         app:layout_constraintStart_toStartOf="@id/gl_left"
-        />
+        app:layout_constraintBottom_toBottomOf="@id/gl_top9"
+        app:layout_constraintEnd_toEndOf="@id/gl_left2" />
 
     <Button
         android:id="@+id/btn_map_refresh"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/btn_round_shape"
         android:textSize="13dp"
-        android:text="맵 새로고침"
-        android:layout_marginBottom="5dp"
-        app:layout_constraintTop_toTopOf="@id/gl_top7"
-        app:layout_constraintStart_toStartOf="@id/gl_mid"
-        app:layout_constraintEnd_toEndOf="@id/gl_right"
-        app:layout_constraintBottom_toBottomOf="@id/gl_top4"
-        />
+        android:background="@drawable/icon_refresh"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="15dp"
+        app:layout_constraintStart_toStartOf="@id/gl_mid2"
+        app:layout_constraintBottom_toBottomOf="@id/gl_top5"
+        app:layout_constraintEnd_toEndOf="@id/gl_final_right"
+        app:layout_constraintTop_toTopOf="@id/gl_top11" />
 
+    <Switch
+        android:id="@+id/switchButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="산책모드  "
+        app:layout_constraintBottom_toTopOf="@+id/iv_weathericon"
+        app:layout_constraintEnd_toEndOf="@+id/iv_heart"
+        app:layout_constraintStart_toStartOf="@+id/iv_heart"
+        app:layout_constraintTop_toBottomOf="@+id/iv_heart" />
     <fragment
         android:id="@+id/fragmentMap"
         android:name="com.google.android.gms.maps.MapFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="@id/gl_top4"
-        app:layout_constraintStart_toStartOf="@id/gl_left"
-        app:layout_constraintEnd_toEndOf="@id/gl_right"
+        app:layout_constraintStart_toStartOf="@id/gl_final_left"
+        app:layout_constraintEnd_toEndOf="@id/gl_final_right"
         app:layout_constraintBottom_toBottomOf="@id/gl_top5"/>
-
-    <Button
-        android:id="@+id/btn_empty"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@drawable/btn_round_shape"
-        app:layout_constraintStart_toStartOf="@id/gl_left"
-        app:layout_constraintEnd_toEndOf="@id/gl_right"
-        app:layout_constraintBottom_toBottomOf="@id/gl_top3"
-        app:layout_constraintTop_toTopOf="@id/gl_top2"/>
 
     <TextView
         android:id="@+id/tv_temp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="온도"
-        android:textSize="20dp"
+        android:textSize="15dp"
+        android:layout_marginBottom="15dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
         app:layout_constraintStart_toStartOf="@id/gl_mid"
-        app:layout_constraintEnd_toEndOf="@id/gl_right"
-        app:layout_constraintTop_toTopOf="@id/gl_top2"
-        app:layout_constraintBottom_toTopOf="@id/tv_weatherinfo"/>
+        app:layout_constraintTop_toTopOf="@id/gl_top10"
+        app:layout_constraintEnd_toEndOf="@id/gl_right2"
+        app:layout_constraintBottom_toBottomOf="@id/gl_top6"/>
 
     <Button
         android:id="@+id/btn_renew"
@@ -213,9 +276,8 @@
         android:layout_marginBottom="10dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/icon_renew"
-        app:layout_constraintEnd_toEndOf="@id/gl_right"
-        app:layout_constraintBottom_toBottomOf="@id/gl_top3"
-        app:layout_constraintStart_toStartOf="@id/gl_mid2"/>
+        app:layout_constraintStart_toStartOf="@id/gl_right2"
+        app:layout_constraintBottom_toBottomOf="@id/gl_top6"/>
 
     <TextView
         android:id="@+id/tv_weatherinfo"
@@ -223,19 +285,19 @@
         android:layout_height="wrap_content"
         android:text="날씨"
         android:layout_marginBottom="10dp"
-        android:textSize="18sp"
+        android:textSize="15sp"
+        app:layout_constraintTop_toBottomOf="@id/tv_temp"
         app:layout_constraintStart_toStartOf="@id/gl_mid"
-        app:layout_constraintEnd_toStartOf="@id/btn_renew"
-        app:layout_constraintBottom_toBottomOf="@id/gl_top3"/>
+        app:layout_constraintEnd_toEndOf="@id/gl_right2"/>
 
     <ImageView
         android:id="@+id/iv_weathericon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/gl_top3"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="@id/gl_left2"
+        app:layout_constraintTop_toTopOf="@id/gl_top10"
+        app:layout_constraintBottom_toBottomOf="@id/gl_top6"
         app:layout_constraintEnd_toEndOf="@id/gl_mid"
-        app:layout_constraintStart_toStartOf="@id/gl_left"
-        app:layout_constraintTop_toTopOf="@id/gl_top2"
         app:srcCompat="@drawable/icon01" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
