--- a/app/src/main/res/menu/activity_drawer_menu_drawer.xml
+++ b/app/src/main/res/menu/activity_drawer_menu_drawer.xml
@@ -31,8 +31,7 @@
             <item
                 android:id="@+id/nav_dog_list"
                 android:icon="@drawable/ic_list"
-                android:title="등록 목록" />
-                />
+                android:title="데이터 보기" />
         </menu>
     </item>
 
